fixed landscape layout issue

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 }
 
 html, body, main{
+	overflow: hidden;
 	width: 100%;
 	height: 100%;
 	margin:0;
@@ -298,10 +299,20 @@ main h2 {
 .cover-page h1 {
 	margin:0;
 	font-size:60px;
+	top:-18%;
 	position: relative;
 	text-align: center;
 }
 
+.cover-page p {
+	top:-18%;
+	position: relative;
+	margin-left: 2%;
+	margin-right: 2%;
+	margin-top: 0;
+	margin-bottom: 1%;
+	font-size:9px;
+}
 .cover-page img {
 	margin:0;
 	position: relative;
@@ -312,6 +323,7 @@ main h2 {
 
 .cover-page button {
 	margin:0;
+	top:-60px;
 	position: relative;
 	width: 160px;
 	height: 40px;
@@ -322,19 +334,49 @@ main h2 {
 
 }
 
-.cover-page button:hover {
-	color:black;
-	background-color: lightblue;
-	border: 1px solid black;
+.cover-page button:active {
+  transform: translateY(4px);
+}
 
+.cover-page button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.cover-page button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.cover-page button:hover span {
+  padding-right: 25px;
+}
+
+.cover-page button:hover span:after {
+  opacity: 1;
+  right: 0;
 }
 
 
-
-
 /*responsive design codes*/
+/*landscape*/
+@media only screen and (max-width: 500px) and (orientation : landscape){
+	.cover-page p {
+	font-size:12px;
+	}
 
-@media only screen and (max-width: 960px) and (min-width: 500px) {
+}
+
+@media only screen and (max-width: 960px) and (min-width: 500px) and (orientation : portrait) {
+	.cover-page p {
+	font-size:12px;
+	}
 	main #searchBar{
 		margin:0;
 		width: 60%;
@@ -392,9 +434,19 @@ main h2 {
 	}
 
 }
+/*landscape*/
+@media only screen and (max-width: 960px) and (min-width: 500px) and (orientation : landscape){
+	.cover-page p {
+	font-size:12px;
+	}
 
+}
 
 @media only screen and (min-width: 960px) and (max-width: 1280px) {
+
+	.cover-page p {
+	font-size:18px;
+	}
 	main #searchBar{
 		margin:0;
 		width: 30%;
@@ -454,6 +506,9 @@ main h2 {
 }
 
 @media only screen and (min-width: 1280px) {
+	.cover-page p {
+	font-size:18px;
+	}
 	main #searchBar{
 		margin:0;
 		width: 22.5%;
